[package]
name = "bitdex-primitives"
version = "2.0.0-rc6"
authors = ["pangwa <pangwa@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
serde = { version = "1.0.101", optional = true }
strum = "0.19.2"
strum_macros = "0.19.2"
int-enum = "0.4.0"

[dependencies.sp-core]
default-features = false
version = '2.0.0-rc6'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-rc6'

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
	"sp-runtime/std",
	"sp-core/std",
]