[package]
name = "clover-primitives"
authors = ['Clover Network <https://github.com/clover-network>']
description = "Clover primitives definitions"
edition = "2018"
license = 'GPL-3.0'
homepage = "https://substrate.dev"
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
serde = { version = "1.0.101", optional = true }
num-traits = { version = "0.2", default-features = false}
num-derive= { version = "0.2", default-features = false}
strum = "0.19.2"
strum_macros = "0.19.2"
int-enum = "0.4.0"
enum-iterator = "0.6.0"
sp-core = { version = '2.0.0', default-features = false }
sp-api = { version = "2.0.0", default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = "2.0.0", default-features = false }
evm = { version = "0.18", default-features = false, features = ["with-codec"] }
ethereum = { version = "0.5", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.9", default-features = false }

[features]
default = ["std"]
std = [
  'num-traits/std',
  "serde",
  "codec/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "evm/std",
  "evm/with-serde",
  "sp-api/std",
  "ethereum/std",
  "ethereum-types/std",
]