[package]
name = "bitdex-rpc"
version = "2.0.0-rc6"
authors = ["pangwa <pangwa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Runtime API definition required by System RPC extensions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.3"
jsonrpc-derive = "14.0.3"
sp-runtime = { version = "2.0.0-rc6" }
sp-api = { version = "2.0.0-rc6" }
sp-std = { version = "2.0.0-rc6", default-features = false }
sp-blockchain = { version = "2.0.0-rc6" }
bitdex-rpc-runtime-api = { path = "runtime-api" }
serde = { version = "1.0.101", optional = true }
bitdex-primitives = { path = "../primitives" }
strum = "0.19.2"
strum_macros = "0.19.2"
int-enum = "0.4.0"

[features]
default = ["std"]
std = [
  "serde",
  "bitdex-rpc-runtime-api/std",
  "sp-api/std",
  "codec/std",
]