[package]
name = "clover-rpc"
authors = ['Clover Network <https://github.com/clover-network>']
version = '0.9.0'
edition = "2018"
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
description = "Runtime API definition required by System RPC extensions."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
sp-runtime = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sp-std = { version = "2.0.0", default-features = false }
sp-blockchain = { version = "2.0.0" }
clover-rpc-runtime-api = { path = "runtime-api" }
serde = { version = "1.0.101", optional = true }
clover-primitives = { path = "../primitives" }
strum = "0.19.2"
strum_macros = "0.19.2"
int-enum = "0.4.0"

[features]
default = ["std"]
std = [
  "serde",
  "clover-rpc-runtime-api/std",
  "sp-api/std",
  "codec/std",
]